labboxapi_k8s/template/pod_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hostname
  namespace: user
spec:
  selector:
    labbox-pod-name: hostname
  ports:
  - port: 8000
    targetPort: 8000
