labboxapi_k8s/template/pod_ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname
  namespace: user
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - http:
      paths:
      - path: /jupyter/hostname
        backend:
          serviceName: hostname
          servicePort: 8000
